--- a/pro24(스프링_마이바티스_총괄)/WEB-INF(xml.jsp.properties)/web.xml
+++ b/pro24(스프링_마이바티스_총괄)/WEB-INF(xml.jsp.properties)/web.xml
@@ -22,13 +22,14 @@
   <context-param>
   	<param-name>contextConfigLocation</param-name>
   	<param-value>
-  		/WEB-INF/config/action-mybatis.xml <!-- mybatis관련(모델에대한)환경설정_ibatis라고도함 -->
+  		/WEB-INF/config/action-mybatis.xml <!-- mybatis관련(모델에대한)환경설정_파일이고 ibatis라고도함 -->
   		/WEB-INF/config/action-service.xml
   	</param-value>
   </context-param>
   
   <!-- DispatcherServlet인 action-servlet이 실행될때 위의 contextConfigLocation의 
-  action-mybatis와 action-service가 같이 실행 -->
+  action-mybatis와 action-service가 같이 실행
+  action-으로 시작하는 파일들을 읽을수 있게함 아래 servlet-name이 action이기때문에 -->
   <servlet>
   	<servlet-name>action</servlet-name>
   	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
